--- a/benchmarks/results/benchmarks.html
+++ b/benchmarks/results/benchmarks.html
@@ -9,41 +9,14 @@
 
 <body>
 <div class="container">
-    <div class="item" id="LCFlGRmTSzGD" style="width:900px;height:500px;"></div>
+    <div class="item" id="XOhYnFuLKyDE" style="width:900px;height:500px;"></div>
 </div>
 
 <script type="text/javascript">
     "use strict";
-    let goecharts_LCFlGRmTSzGD = echarts.init(document.getElementById('LCFlGRmTSzGD'), "white");
-    let option_LCFlGRmTSzGD = {"color":["#c23531","#2f4554","#61a0a8","#d48265","#91c7ae","#749f83","#ca8622","#bda29a","#6e7074","#546570"],"legend":{"show":true},"series":[{"name":"throughput","type":"bar","barGap":"0","waveAnimation":false,"data":[{"value":94000},{"value":110645},{"value":22000}]}],"title":{"text":"results/clients.txt","subtext":"messages = 100000.00, payload_size = 100.00"},"tooltip":{"show":true},"xAxis":[{}],"yAxis":[{"data":["rumqtt-async","rumqtt-sync","paho-go"]}]};
-    goecharts_LCFlGRmTSzGD.setOption(option_LCFlGRmTSzGD);
-</script>
-
-<style>
-    .container {margin-top:30px; display: flex;justify-content: center;align-items: center;}
-    .item {margin: auto;}
-</style>
-</body>
-</html>
-
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <title>Awesome go-echarts</title>
-    <script src="https://go-echarts.github.io/go-echarts-assets/assets/echarts.min.js"></script>
-</head>
-
-<body>
-<div class="container">
-    <div class="item" id="XkwoHFWNhngV" style="width:900px;height:500px;"></div>
-</div>
-
-<script type="text/javascript">
-    "use strict";
-    let goecharts_XkwoHFWNhngV = echarts.init(document.getElementById('XkwoHFWNhngV'), "white");
-    let option_XkwoHFWNhngV = {"color":["#c23531","#2f4554","#61a0a8","#d48265","#91c7ae","#749f83","#ca8622","#bda29a","#6e7074","#546570"],"legend":{"show":true},"series":[{"name":"write_throughput_gpbs","type":"bar","barGap":"0","waveAnimation":false,"data":[{"value":0.7486469}]},{"name":"read_throughput_gpbs","type":"bar","barGap":"0","waveAnimation":false,"data":[{"value":3.4934227}]}],"title":{"text":"results/parsers.txt","subtext":"messages = 1048576.00, payload_size = 1024.00, total_size_gb = 1.02"},"tooltip":{"show":true},"xAxis":[{}],"yAxis":[{"data":["mqttbytes"]}]};
-    goecharts_XkwoHFWNhngV.setOption(option_XkwoHFWNhngV);
+    let goecharts_XOhYnFuLKyDE = echarts.init(document.getElementById('XOhYnFuLKyDE'), "white");
+    let option_XOhYnFuLKyDE = {"color":["#c23531","#2f4554","#61a0a8","#d48265","#91c7ae","#749f83","#ca8622","#bda29a","#6e7074","#546570"],"legend":{"show":true},"series":[{"name":"throughput","type":"bar","barGap":"0","waveAnimation":false,"data":[{"value":317000},{"value":185644},{"value":17000}]}],"title":{"text":"results/clients.txt","subtext":"messages = 100000.00, payload_size = 100.00"},"tooltip":{"show":true},"xAxis":[{}],"yAxis":[{"data":["rumqtt-async","rumqtt-sync","paho-go"]}]};
+    goecharts_XOhYnFuLKyDE.setOption(option_XOhYnFuLKyDE);
 </script>
 
 <style>
