--- a/benchmarks/results/benchmarks.html
+++ b/benchmarks/results/benchmarks.html
@@ -9,14 +9,41 @@
 
 <body>
 <div class="container">
-    <div class="item" id="XOhYnFuLKyDE" style="width:900px;height:500px;"></div>
+    <div class="item" id="BcLwdXnvBoew" style="width:900px;height:500px;"></div>
 </div>
 
 <script type="text/javascript">
     "use strict";
-    let goecharts_XOhYnFuLKyDE = echarts.init(document.getElementById('XOhYnFuLKyDE'), "white");
-    let option_XOhYnFuLKyDE = {"color":["#c23531","#2f4554","#61a0a8","#d48265","#91c7ae","#749f83","#ca8622","#bda29a","#6e7074","#546570"],"legend":{"show":true},"series":[{"name":"throughput","type":"bar","barGap":"0","waveAnimation":false,"data":[{"value":317000},{"value":185644},{"value":17000}]}],"title":{"text":"results/clients.txt","subtext":"messages = 100000.00, payload_size = 100.00"},"tooltip":{"show":true},"xAxis":[{}],"yAxis":[{"data":["rumqtt-async","rumqtt-sync","paho-go"]}]};
-    goecharts_XOhYnFuLKyDE.setOption(option_XOhYnFuLKyDE);
+    let goecharts_BcLwdXnvBoew = echarts.init(document.getElementById('BcLwdXnvBoew'), "white");
+    let option_BcLwdXnvBoew = {"color":["#c23531","#2f4554","#61a0a8","#d48265","#91c7ae","#749f83","#ca8622","#bda29a","#6e7074","#546570"],"legend":{"show":true},"series":[{"name":"throughput","type":"bar","barGap":"0","waveAnimation":false,"data":[{"value":317000},{"value":185644},{"value":17000}]}],"title":{"text":"results/clients.txt","subtext":"messages = 100000.00, payload_size = 100.00"},"tooltip":{"show":true},"xAxis":[{}],"yAxis":[{"data":["rumqtt-async","rumqtt-sync","paho-go"]}]};
+    goecharts_BcLwdXnvBoew.setOption(option_BcLwdXnvBoew);
+</script>
+
+<style>
+    .container {margin-top:30px; display: flex;justify-content: center;align-items: center;}
+    .item {margin: auto;}
+</style>
+</body>
+</html>
+
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <title>Awesome go-echarts</title>
+    <script src="https://go-echarts.github.io/go-echarts-assets/assets/echarts.min.js"></script>
+</head>
+
+<body>
+<div class="container">
+    <div class="item" id="lXXLGqYdlmoM" style="width:900px;height:500px;"></div>
+</div>
+
+<script type="text/javascript">
+    "use strict";
+    let goecharts_lXXLGqYdlmoM = echarts.init(document.getElementById('lXXLGqYdlmoM'), "white");
+    let option_lXXLGqYdlmoM = {"color":["#c23531","#2f4554","#61a0a8","#d48265","#91c7ae","#749f83","#ca8622","#bda29a","#6e7074","#546570"],"legend":{"show":true},"series":[{"name":"write_throughput_gpbs","type":"bar","barGap":"0","waveAnimation":false,"data":[{"value":0.69907767},{"value":0.7265592},{"value":2.2953565}]},{"name":"read_throughput_gpbs","type":"bar","barGap":"0","waveAnimation":false,"data":[{"value":3.7395837},{"value":2.9614055},{"value":0.58006984}]}],"title":{"text":"results/parsers.txt","subtext":"messages = 1048576.00, payload_size = 1024.00, total_size_gb = 1.02"},"tooltip":{"show":true},"xAxis":[{}],"yAxis":[{"data":["mqttv4parser","mqttv5parser","natsparser"]}]};
+    goecharts_lXXLGqYdlmoM.setOption(option_lXXLGqYdlmoM);
 </script>
 
 <style>
